--- a/e14/main.css
+++ b/e14/main.css
@@ -154,22 +154,20 @@ body {
 .scenecontainer1 {
   left: 4%;
 }
-.asterik {
+.arrow {
   font-size: 40px;
   font-family: 'Baloo';
   color: #133E78;
   position:absolute;
   top: 35%;
   left: 18%;
-  animation-name: asterik;
+  animation-name: arrow;
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
-@keyframes asterik {
+@keyframes arrow {
   0% {left: 18%;}
-  25% {left: 19%;}
-  50% {left: 18%;}
-  75% {left: 17%;}
+  50% {left: 19%;}
   100% {left: 18%;}
 }
 .cover, .pages {
