--- a/Project5/main.css
+++ b/Project5/main.css
@@ -123,7 +123,7 @@ body {
   position: absolute;
   width: 40px;
   height: 15px;
-  bottom: 16%;
+  bottom: 14%;
   left: 66.5%;
 }
 .dogbody {
@@ -131,7 +131,7 @@ body {
   position: absolute;
   width: 100px;
   height: 62px;
-  top: 74%;
+  top: 76%;
   left: 60%;
 }
 .doghead {
@@ -139,7 +139,7 @@ body {
   position: absolute;
   width: 70px;
   height: 70px;
-  bottom: 16%;
+  bottom: 14%;
   left: 55%;
 }
 .paw {
@@ -147,7 +147,7 @@ body {
   position: absolute;
   width: 30px;
   height: 22px;
-  bottom: 15%;
+  bottom: 13%;
   left: 54%;
 }
 .arm {
@@ -155,7 +155,7 @@ body {
   position: absolute;
   width: 76px;
   height: 22px;
-  bottom: 15%;
+  bottom: 13%;
   left: 55%;
 }
 .mouth {
@@ -163,7 +163,7 @@ body {
   background-color: #A6988A;
   width: 36px;
   height: 34px;
-  bottom: 18.5%;
+  bottom: 16.5%;
   left: 53.5%;
 }
 .nose {
@@ -171,7 +171,7 @@ body {
   background-color: black;
   width: 12px;
   height: 12px;
-  bottom: 22.25%;
+  bottom: 20.25%;
   left: 53.25%;
   border-radius: 3px;
 }
@@ -180,7 +180,7 @@ body {
   background-color: black;
   width: 12px;
   height: 5px;
-  bottom: 24.75%;
+  bottom: 22.75%;
   left: 55%;
 }
 .eye2 {
@@ -188,7 +188,7 @@ body {
   background-color: black;
   width: 12px;
   height: 5px;
-  bottom: 24.75%;
+  bottom: 22.75%;
   left: 56.5%;
 }
 .earbase {
@@ -196,7 +196,7 @@ body {
   position: absolute;
   width: 14.25px;
   height: 14px;
-  bottom: 27.5%;
+  bottom: 25.5%;
   left: 56%;
 }
 .earbase2 {
@@ -204,7 +204,7 @@ body {
   position: absolute;
   width: 14.25px;
   height: 14px;
-  bottom: 27.5%;
+  bottom: 25.5%;
   left: 59.35%;
 }
 .eartip {
@@ -212,7 +212,7 @@ body {
   position: absolute;
   width: 21px;
   height: 14px;
-  bottom: 29%;
+  bottom: 27%;
   left: 55.5%;
 }
 .eartip2 {
@@ -220,7 +220,7 @@ body {
   position: absolute;
   width: 19px;
   height: 14px;
-  bottom: 29%;
+  bottom: 27%;
   left: 59%;
 }
 .thigh {
@@ -228,7 +228,7 @@ body {
   position: absolute;
   width: 50px;
   height: 42px;
-  top: 78%;
+  top: 80%;
   left: 64%;
 }
 .leg {
@@ -236,14 +236,38 @@ body {
   position: absolute;
   width: 76px;
   height: 22px;
-  bottom: 15%;
+  bottom: 13%;
   left: 62%;
 }
 .window {
   position: absolute;
-  background-color: skyblue;
+  background-color: #D6FAF7;
   width: 400px;
   height: 420px;
   right: 0%;
   top: 10%;
+}
+.bottomframe {
+  position: absolute;
+  background-color: #92683C;
+  width: 415px;
+  height: 20px;
+  right: 0%;
+  bottom: 18%;
+}
+.rod {
+  position: absolute;
+  background-color: #502802;
+  width: 430px;
+  height: 13px;
+  right: 0%;
+  top: 10%;
+}
+.curtain {
+  position: absolute;
+  background-color: #8B3534;
+  width: 40px;
+  height: 419px;
+  right: 29.5%;
+  bottom: 21%;
 }
