--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -103,7 +103,7 @@ body {
   position: absolute;
   background-color: black;
   width: 30px;
-  height: 100px;
+  height: 130px;
   top: 64%;
   left: 36%;
 }
@@ -111,31 +111,75 @@ body {
   position: absolute;
   background-color: black;
   width: 30px;
-  height: 100px;
+  height: 130px;
   top: 64%;
   left: 56.5%;
 }
 .skirt {
-
-}
-.leg {
-
-}
-.leg2 {
-
-}
-.shoe {
-
-}
-.shoe2 {
-
+  position: absolute;
+  background-color: #751F4E;
+  width: 150px;
+  height: 45px;
+  top: 65%;
+  left: 42%;
+  border-radius: 5px;
 }
 .skirttop {
-
+  position: absolute;
+  background-color: #AB3B78;
+  width: 150px;
+  height: 23px;
+  top: 64.5%;
+  left: 42%;
+  border-radius: 5px;
+}
+.leg {
+  position: absolute;
+  background-color: #F0CD9F;
+  width: 27px;
+  height: 100px;
+  top: 68%;
+  left: 44%;
+}
+.leg2 {
+  position: absolute;
+  background-color: #F0CD9F;
+  width: 27px;
+  height: 100px;
+  top: 68%;
+  left: 49.5%;
+}
+.shoe {
+  position: absolute;
+  background-color: #33234A;
+  width: 40px;
+  height: 29px;
+  top: 82%;
+  left: 48.65%;
+  border-radius: 5px;
+}
+.shoe2 {
+    position: absolute;
+    background-color: #33234A;
+    width: 40px;
+    height: 29px;
+    top: 82%;
+    left: 43.75%;
+    border-radius: 5px;
 }
 .chairleg {
-
+  position: absolute;
+  background-color: brown;
+  width: 17px;
+  height: 85px;
+  top: 72%;
+  left: 43%;
 }
 .chairleg2 {
-
+  position: absolute;
+  background-color: brown;
+  width: 17px;
+  height: 85px;
+  top: 72%;
+  left: 51.5%;
 }
