--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -99,6 +99,15 @@ body {
   left: 34%;
   border-radius: 5px;
 }
+.rug {
+  position: absolute;
+  background-color: #B97E1C;
+  width: 222px;
+  height: 50px;
+  top: 80%;
+  left: 39%;
+  border-radius: 50%;
+}
 .pleg {
   position: absolute;
   background-color: black;
