--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -27,7 +27,7 @@ body {
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  top: 27%;
+  top: 28%;
   left: 43.15%;
 }
 .eye {
@@ -227,7 +227,7 @@ p {
   top: 72%;
   left: 51.5%;
 }
-.circle, .circle2, .circle3, .circle4, .circle5, .circle6, .circle7, .circle8, .circle9 {
+.circle, .circle2, .circle3, .circle4, .circle5, .circle6, .circle7, .circle8, .circle9, .circle10, .circle11, .circle12, .circle13 {
   position: absolute;
   background-color: white;
   width: 30px;
@@ -240,42 +240,129 @@ p {
 }
 .circle2 {
   top: 69%;
-  left: 20%;
+  left: 18%;
 }
 .circle3 {
   top: 69%;
-  left: 20%;
+  left: 16%;
 }
 .circle4 {
   top: 69%;
-  left: 20%;
+  left: 14%;
 }
 .circle5 {
-  top: 69%;
+  top: 73%;
   left: 20%;
 }
 .circle6 {
-  top: 69%;
-  left: 20%;
+  top: 73%;
+  left: 18%;
 }
 .circle7 {
-  top: 69%;
-  left: 20%;
+  top: 73%;
+  left: 16%;
 }
 .circle8 {
-  top: 69%;
-  left: 20%;
+  top: 73%;
+  left: 14%;
 }
 .circle9 {
-  top: 69%;
-  left: 20%;
+  top: 71%;
+  left: 22%;
+}
+.circle10 {
+  top: 77.5%;
+  left: 15%;
+}
+.circle11 {
+  top: 77.5%;
+  left: 17%;
+}
+.circle12 {
+  top: 77.5%;
+  left: 19%;
+}
+.circle13 {
+  top: 76%;
+  left: 21%;
+}
+.tail {
+  position: absolute;
+  background-color: white;
+  width: 15px;
+  height: 23px;
+  border-radius: 50%;
+  top: 67%;
+  left: 13.5%;
 }
 .shead {
-  background-color: #291906;
+  background-color: #473724;
   position: absolute;
-  width: 60px;
-  height: 40px;
+  width: 67px;
+  height: 45px;
   border-radius: 50%;
   top: 65%;
   left: 22%;
+}
+.sear, .sear2 {
+  position: absolute;
+  background-color: #473724;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  left: 21.5%;
+}
+.sear {
+  top: 65%;
+}
+.sear2 {
+  top: 69%;
+}
+.seye, .seye2 {
+  position: absolute;
+  background-color: black;
+  border-radius: 50%;
+  width: 5px;
+  height: 6px;
+  left: 23.75%;
+}
+.seye {
+  top: 66.5%;
+}
+.seye2 {
+  top: 68.75%;
+}
+.sleg, .sleg2, .sleg3, .sleg4 {
+  position: absolute;
+  background-color: #291906;
+}
+.sleg, .sleg2 {
+  width: 10px;
+  height: 30px;
+  top: 82%;
+}
+.sleg3, .sleg4 {
+  width: 8px;
+  height: 25px;
+  top: 82%;
+}
+.sleg {
+  left: 15.5%;
+}
+.sleg2 {
+  left: 21%;
+}
+.sleg3 {
+  left: 16%;
+}
+.sleg4 {
+  left: 21.5%;
+}
+.mstand {
+  background-color: black;
+  width: 10px;
+  height: 70px;
+  position: absolute;
+  top: 75%;
+  left: 29%;
 }
