--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -4,13 +4,14 @@ body {
 .container {
   width: 90%;
   height: 600px;
+  border-radius: 40%;
   position: relative;
   margin-top: 5%;
   margin-left: 5%;
   background-color: #FDEFE5;
   border-style: solid;
   border-width: thick;
-  border-color: #E2C6B1;
+  border-color: #9E7A09;
 }
 .hair {
   position: absolute;
@@ -20,6 +21,24 @@ body {
   border-radius: 50%;
   top: 25%;
   left: 41.85%;
+}
+.brim {
+  position: absolute;
+  background-color: #C2DD17;
+  width: 170px;
+  height: 15px;
+  border-radius: 50%;
+  top: 28.5%;
+  left: 41%;
+}
+.hattop {
+  width: 110px;
+  height: 40px;
+  border-radius: 5px;
+  top: 23%;
+  left: 43.15%;
+  background-color:#C2DD17;
+  position: absolute;
 }
 .face {
   position: absolute;
