--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -4,14 +4,32 @@ body {
 .container {
   width: 90%;
   height: 600px;
-  border-radius: 40%;
+  border-radius: 20px;
   position: relative;
   margin-top: 5%;
   margin-left: 5%;
-  background-color: #FDEFE5;
+  background-color: grey;
   border-style: solid;
   border-width: thick;
-  border-color: #D05628;
+  border-color: navy;
+}
+.littlespotlight {
+  position: absolute;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 425px solid yellow;
+  width: 130px;
+  top: 10%;
+  left: 13%;
+}
+.bigspotlight {
+  position: absolute;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 425px solid yellow;
+  width: 155px;
+  top: 10%;
+  left: 39.5%;
 }
 .hair {
   position: absolute;
